<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lost Pets</string>
    <string name="message_service_name">Message Service</string>
    <string name="notification_channel_id">Lost Pets</string>
    <string name="notification_channel_group_id">Lost Pets G</string>
    <string name="notification_channel_group_name">Chats</string>
    <string name="notification_channel_name">Notificaciones de mensaje</string>
    <string name="foreground_service_notification_content">Comprobando mensajes…</string>
    <string name="login_activity_toolbar_title">Iniciar Sesión</string>
    <string name="signup_activity_toolbar_title">Registrarse</string>
    <string name="ads_fragment_toolbar_title">Anuncios</string>
    <string name="ad_detail_activity_toolbar_title">Detalle del Anuncio</string>
    <string name="user_ads_fragment_toolbar_title">Mis Anuncios</string>
    <string name="user_chats_fragment_toolbar_title">Chats</string>
    <string name="add_ad_fragment_toolbar_title">Nuevo Anuncio</string>
    <string name="update_ad_fragment_toolbar_title">Modificar Anuncio</string>
    <string name="settings_fragment_toolbar_title">Ajustes</string>
    <string name="cont_desc_login">El logo de la aplicación</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_signup">Registrarse</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_repeated_password">Repetir Contraseña</string>
    <string name="msg_email_required">¡El correo electrónico es obligatorio!</string>
    <string name="msg_email_invalid">¡El correo electrónico es inválido!</string>
    <string name="msg_email_not_unique">¡Ya existe un usuario con este correo electrónico!</string>
    <string name="msg_signed_up_user">¡Su cuenta ha sido creada correctamente!</string>
    <string name="msg_phone_required">¡El teléfono es obligatorio!</string>
    <string name="msg_phone_invalid">¡El teléfono es inválido!</string>
    <string name="msg_first_name_required">¡El nombre es obligatorio!</string>
    <string name="msg_last_name_required">¡Los apellidos son obligatorios!</string>
    <string name="msg_password_required">¡La contraseña es obligatoria!</string>
    <string name="msg_repeated_password_required">¡Repetir la contraseña es obligatorio!</string>
    <string name="msg_repeated_password_invalid">¡Las dos contraseñas no coinciden!</string>
    <string name="msg_no_internet_connection" tools:ignore="Typos">¡No hay conexión a Internet en
        este momento!</string>
    <string name="msg_service_not_avabile" tools:ignore="Typos">¡El servicio no está disponible
        en este momento!</string>
    <string name="msg_invalid_email_or_password">¡Correo electrónico o contraseña
        inválidos!</string>
    <string name="msg_expired_session">¡La sesión ha caducado! ¡Por favor, vuelva a iniciar
        sesión!</string>
    <string name="msg_user_disabled">¡Su cuenta ha sido inhabilitada!</string>
    <string name="msg_only_users_allowed">¡Únicamente los usuarios pueden acceder a la
        aplicación móvil!</string>
    <string name="msg_messaging_message_sent_error">¡Ha ocurrido un error durante el
        envío de mensajes! ¡Reenviando el último mensaje!</string>
    <string name="msg_messaging_connection_error">¡La conexión ha sido restablecida!</string>
    <string name="msg_messaging_failed_server_heartbeat">¡Se ha perdido la conexión con
        el servidor! ¡Reconectando!</string>
    <string name="msg_messaging_message_received_error">¡Ha ocurrido un error durante la
        recepción de mensajes! ¡Reconectando!</string>
    <string name="cont_desc_progress_bar_logo">Logo para la barra de progreso</string>
    <string name="navigation_drawer_open">Abrir el menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar el menú de navegación</string>
    <string name="cont_desc_logged_account">El logo para el usuario que ha iniciado sesión</string>
    <string name="cont_desc_pet">La foto de la mascota perdida</string>
    <string name="cont_desc_feeling_pet_status">La imagen del estado de ánimo</string>
    <string name="cont_desc_user_chat">La imagen del usuario del chat</string>
    <string name="cont_desc_language_logo">Logo para la preferencia del idioma de la
        aplicación</string>
    <string name="pref_language">Idioma</string>
    <string name="pref_language_description">Cambiar el idioma de la aplicación</string>
    <string name="nav_user_profile_info">%1$s %2$s</string>
    <string name="nav_ads">Anuncios</string>
    <string name="nav_user_ads">Mis Anuncios</string>
    <string name="nav_add_ad">Nuevo Anuncio</string>
    <string name="nav_user_chats">Chats</string>
    <string name="nav_settings">Ajustes</string>
    <string name="nav_logout">Cerrar Sesión</string>
    <string name="hint_code">Código Anuncio</string>
    <string name="hint_pet_status">Estado Mascota</string>
    <string name="hint_name">Nombre Mascota</string>
    <string name="hint_date">Fecha Desaparición</string>
    <string name="hint_reward">Recompensa Ofrecida</string>
    <string name="ad_pet_status_lost">Perdida</string>
    <string name="ad_pet_status_found">Encontrada</string>
    <string name="ad_reward">%1$.2f €</string>
    <string name="msg_no_ads">¡No existen anuncios de mascotas perdidas publicados!</string>
    <string name="msg_no_user_ads">¡No ha publicado ningún anuncio aún!</string>
    <string name="msg_disabled_user_ads">¡Alguno de los anuncios que ha publicado ha sido
        inhabilitado por incumplir las normas de la comunidad!</string>
    <string name="msg_no_chats">¡No existen chats!</string>
    <string name="cont_desc_card_chat_item_last_message_status">Logo para el estado del
        último mensaje del chat</string>
    <string name="hint_message_chat_detail">Escribe un mensaje…</string>
    <string name="cont_desc_chat_detail_send_message">Logo para el botón de enviar un
        mensaje</string>
    <string name="cont_desc_card_message_item_status">Logo para el estado del mensaje del chat</string>
    <string name="cont_desc_ad_detail_pet">La imagen de la mascota perdida de los detalles del
        anuncio</string>
    <string name="cont_desc_ad_detail_feeling_pet_status">La imagen del estado de ánimo de los
        detalles del anuncio</string>
    <string name="cont_desc_ad_detail_update_ad">Logo para el botón de actualizar un
        anuncio</string>
    <string name="text_ad">Anuncio</string>
    <string name="hint_code_ad_detail">Código</string>
    <string name="hint_pet_status_ad_detail">Estado Mascota</string>
    <string name="hint_reward_ad_detail">Recompensa Ofrecida</string>
    <string name="hint_date_ad_detail">Fecha Desaparición</string>
    <string name="map_marker_title_ad_detail">Ubicación de la desaparición de %1$s</string>
    <string name="hint_remarks_ad_details">Observaciones</string>
    <string name="text_pet">Mascota</string>
    <string name="hint_name_ad_detail">Nombre</string>
    <string name="hint_type_ad_detail">Tipo</string>
    <string name="hint_race_ad_detail">Raza</string>
    <string name="hint_sex_ad_detail">Sexo</string>
    <string name="ad_detail_pet_sex_male">Macho</string>
    <string name="ad_detail_pet_sex_female">Hembra</string>
    <string name="hint_colour_ad_detail">Color</string>
    <string name="hint_microchip_id_ad_detail">Microchip (ID)</string>
    <string name="text_owner">Propietario</string>
    <string name="hint_first_name_ad_detail">Nombre</string>
    <string name="hint_last_name_ad_detail">Apellidos</string>
    <string name="hint_email_ad_detail">Correo Electrónico</string>
    <string name="cont_desc_ad_detail_send_email">Logo para el botón de envío de correo
        electrónico</string>
    <string name="hint_phone_ad_detail">Teléfono</string>
    <string name="cont_desc_ad_detail_call">Logo para el botón de llamada</string>
    <string name="cont_desc_ad_detail_chat">Logo para el botón de chat</string>
    <string name="choose_pet_image">Seleccionar imagen de la mascota</string>
    <string name="cont_desc_add_ad_pet">La foto de la mascota perdida del nuevo anuncio</string>
    <string name="text_ad_add_ad">Anuncio</string>
    <string name="hint_reward_add_ad">Recompensa Ofrecida</string>
    <string name="hint_date_add_ad">Fecha Desaparición</string>
    <string name="hint_time_add_ad">Hora Desaparición</string>
    <string name="map_marker_title_add_ad">Ubicación de la desaparición de la mascota</string>
    <string name="cont_desc_add_ad_select_date">Logo para el botón de selección de la fecha de
        disaparición</string>
    <string name="cont_desc_add_ad_select_time">Logo para el botón de selección de la hora
        de disaparición</string>
    <string name="hint_remarks_add_ad">Observaciones</string>
    <string name="text_pet_add_ad">Mascota</string>
    <string name="hint_name_add_ad">Nombre</string>
    <string name="hint_type_add_ad">Tipo</string>
    <string name="hint_race_add_ad">Raza</string>
    <string name="add_ad_pet_sex">Sexo</string>
    <string name="add_ad_pet_sex_male">Macho</string>
    <string name="add_ad_pet_sex_female">Hembra</string>
    <string name="hint_colour_add_ad">Color</string>
    <string name="hint_microchip_id_add_ad">Microchip (ID)</string>
    <string name="btn_add_ad">Publicar Anuncio</string>
    <string name="cont_desc_update_ad_pet">La foto de la mascota perdida del anuncio</string>
    <string name="text_ad_update_ad">Anuncio</string>
    <string name="update_ad_pet_status">Estado</string>
    <string name="update_ad_pet_status_found">Encontrada</string>
    <string name="update_ad_pet_status_lost">Perdida</string>
    <string name="hint_reward_update_ad">Recompensa Ofrecida</string>
    <string name="hint_date_update_ad">Fecha Desaparición</string>
    <string name="hint_time_update_ad">Hora Desaparición</string>
    <string name="map_marker_title_update_ad">Ubicación de la desaparición de la mascota</string>
    <string name="cont_desc_update_ad_pet_status">Logo para el estado del anuncio de la mascota</string>
    <string name="cont_desc_update_ad_select_date">Logo para el botón de selección de la fecha de
        disaparición</string>
    <string name="cont_desc_update_ad_select_time">Logo para el botón de selección de la hora
        de disaparición</string>
    <string name="hint_remarks_update_ad">Observaciones</string>
    <string name="text_pet_update_ad">Mascota</string>
    <string name="hint_pet_name_update_ad">Nombre</string>
    <string name="hint_type_update_ad">Tipo</string>
    <string name="hint_race_update_ad">Raza</string>
    <string name="update_ad_pet_sex">Sexo</string>
    <string name="update_ad_pet_sex_male">Macho</string>
    <string name="update_ad_pet_sex_female">Hembra</string>
    <string name="hint_colour_update_ad">Color</string>
    <string name="hint_microchip_id_update_ad">Microchip (ID)</string>
    <string name="btn_update_ad">Guardar Anuncio</string>
    <string name="msg_image_required">¡La imagen de la mascota es obligatoria!</string>
    <string name="msg_image_is_processing" tools:ignore="Typos">¡La imágen de la mascota se está
        procesando! ¡Por favor, espere un momento!</string>
    <string name="msg_image_is_processed">¡La imágen de la mascota ha sido procesada
        correctamente!</string>
    <string name="msg_status_required">¡El estado de la mascota es obligatorio!</string>
    <string name="msg_reward_required">¡La recompensa es obligatoria!</string>
    <string name="msg_reward_invalid">¡La recompensa es inválida!</string>
    <string name="msg_date_required">¡La fecha de la desaparición de la mascota es
        obligatoria!</string>
</resources>