<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:theme="@style/LostPetsTheme"
    card_view:cardBackgroundColor="@color/colorSecondaryText"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/adPetImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cont_desc_pet"
            android:maxWidth="150dp"
            android:maxHeight="125dp"
            android:src="@drawable/ic_pet"
            card_view:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/feelingPetStatusImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cont_desc_feeling_pet_status"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:src="@drawable/ic_pet"
            card_view:layout_constraintStart_toStartOf="@+id/adPetImageView"
            card_view:layout_constraintTop_toTopOf="@+id/adPetImageView" />

        <android.support.constraint.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.5" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/codeTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_code"
            card_view:hintAnimationEnabled="false"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            card_view:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/codeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/petStatusTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_pet_status"
            card_view:hintAnimationEnabled="false"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            card_view:layout_constraintTop_toBottomOf="@+id/codeTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/petStatusEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/adPetNameTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/hint_name"
            card_view:hintAnimationEnabled="false"
            card_view:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/adPetImageView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/adPetNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/adRewardTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_reward"
            card_view:hintAnimationEnabled="false"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            card_view:layout_constraintTop_toTopOf="@+id/adPetNameTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/adRewardEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/adDateTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_date"
            card_view:hintAnimationEnabled="false"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/updateAdCardButton"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/adPetNameTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/adDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif"
                android:inputType="date"
                android:singleLine="true"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/updateAdCardButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cont_desc_ad_detail_update_ad"
            android:src="@drawable/ic_edit"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/adDateTextInputLayout"
            card_view:layout_constraintTop_toBottomOf="@+id/adRewardTextInputLayout" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>