<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityLoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.LogInActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/app_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:showIn="@layout/activity_login" />

    <android.support.constraint.Guideline
        android:id="@+id/loginLayoutUpHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/cont_desc_login"
        app:layout_constraintBottom_toTopOf="@+id/emailTextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginLayoutUpHorizontalGuideline"
        app:srcCompat="@mipmap/login_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_email"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/LostPetsTheme.ErrorTextAppearance"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_password"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/LostPetsTheme.ErrorTextAppearance"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawableLeft="@drawable/ic_password"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:drawableLeft="@drawable/ic_lock_open"
        android:drawablePadding="-10dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

    <Button
        android:id="@+id/signupButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_person_add"
        android:drawablePadding="-10dp"
        android:text="@string/btn_signup"
        android:theme="@style/ButtonSecondary"
        app:layout_constraintBottom_toTopOf="@+id/loginLayoutDownHorizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <android.support.constraint.Guideline
        android:id="@+id/loginLayoutDownHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <include
        layout="@layout/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/activityLoginLayout"
        app:layout_constraintLeft_toLeftOf="@+id/activityLoginLayout"
        app:layout_constraintRight_toRightOf="@+id/activityLoginLayout"
        app:layout_constraintTop_toTopOf="@+id/activityLoginLayout" />

</android.support.constraint.ConstraintLayout>


